--- a/server/requirements.txt
+++ b/server/requirements.txt
@@ -24,7 +24,7 @@ MarkupSafe==1.1.1
 marshmallow==3.0.0
 multidict==4.5.2
 psycopg2==2.8.3
-pycrypto==2.6.1
+pycrypto<=2.6.1
 PyJWT==1.7.1
 python-dateutil==2.8.0
 python-dotenv==0.10.3
