--- a/server/alembic.ini
+++ b/server/alembic.ini
@@ -35,7 +35,11 @@ script_location = alembic
 # are written from script.py.mako
 # output_encoding = utf-8
 
-sqlalchemy.url = postgres://admin:qweqweqwe@localhost:5432/sanic_example
+# for docker 
+sqlalchemy.url = postgres://postgres:postgres@db:5432/sanic_example
+# for local usage
+# TODO: add .env getter
+# sqlalchemy.url = postgres://:@localhost:5432/sanic_example
 
 
 # Logging configuration
